--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "breakclone"]
 	path = breakclone
 	url = https://github.com/argymeg/breakclone
+[submodule "precision_clonality"]
+	path = precision_clonality
+	url = ./../precision_clonality/
